v9.0.0/_sources/generated/pcdsdevices.state.CombinedStateRecordPositioner.rst.txt
pcdsdevices.state.CombinedStateRecordPositioner
===============================================

.. currentmodule:: pcdsdevices.state

.. autoclass:: CombinedStateRecordPositioner

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - state
          - :class:`~ophyd.signal.EpicsSignal`
          - 
          - 
          - hinted
          - Inherited from :class:`~pcdsdevices.state.StateRecordPositionerBase`
    
        * - x_motor
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:X:MOTOR``
          - 
          - normal
          - 
    
        * - y_motor
          - :class:`~pcdsdevices.epics_motor.IMS`
          - ``:Y:MOTOR``
          - 
          - normal
          - 
    

    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: get_state
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: egu
    .. autoattribute:: high_limit
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: limits
    .. autoattribute:: low_limit
    .. autoattribute:: moving
    .. autoattribute:: needs_parent
    .. autoattribute:: position
    .. autoattribute:: settle_time
    .. autoattribute:: stage_group
    .. autoattribute:: states_list
    .. autoattribute:: stop
    .. autoattribute:: subscriptions
    .. autoattribute:: timeout
    
    